# SimpleMania

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Chart.cpp  Chart.h  EditorCli.cpp  Game.cpp  Game.h  OsuParser.cpp  OsuParser.h  Renderer.cpp  Renderer.h  main.cpp
tools/: package.ps1
